<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/sync_startup"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sync_start_value"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/sync_delay"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/sync_delay_value"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/switch_delay"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/switch_delay_value"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:text="@string/save_delay"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/save_delay_value"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>