<?xml version="1.0" encoding="utf-8"?><!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity"-->
<!--    android:id="@+id/root_container">-->


<!--    <LinearLayout-->
<!--        android:id="@+id/controls_layout"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:orientation="horizontal"-->

<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:text="ON" />-->

<!--        <Button-->
<!--            android:id="@+id/button2"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:text="OFF" />-->

<!--        <Button-->
<!--            android:id="@+id/button3"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:text="Sync" />-->

<!--        <Button-->
<!--            android:id="@+id/button4"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:text="Save" />-->
<!--            </LinearLayout>-->

<!--    </LinearLayout>-->

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/controls_layout">-->

<!--        <RadioGroup-->
<!--            android:id="@+id/switcher_radio_group"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->

<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->
<!--    </ScrollView>-->

<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="10dp"-->

<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/controls_layout">-->
<!--    >-->

<!--    </LinearLayout>-->
<!--    <RadioGroup-->
<!--        android:id="@+id/switcher_radio_group"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->

<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        &lt;!&ndash;        <RadioButton&ndash;&gt;-->
<!--        &lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--        &lt;!&ndash;            android:text="@string/sun_white"&ndash;&gt;-->
<!--        &lt;!&ndash;            tools:layout_editor_absoluteX="119dp"&ndash;&gt;-->
<!--        &lt;!&ndash;            tools:layout_editor_absoluteY="321dp" />&ndash;&gt;-->
<!--    </RadioGroup>-->
<!--    <LinearLayout-->
<!--        android:orientation="horizontal"-->
<!--        android:id="@+id/switcher_radio_group"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->
<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->
<!--            <LinearLayout-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content">-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="1"/>-->
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/sun_white"/>-->
<!--            </LinearLayout>-->
<!--            <LinearLayout-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content">-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="1"/>-->
<!--                <TextView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/sun_white"/>-->
<!--            </LinearLayout>-->
<!--        </LinearLayout>-->
<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->
<!--        </LinearLayout>-->
<!--    </LinearLayout>-->


<!--    <LinearLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="20dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="1" />-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="SUN WHITE" />-->

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="warm white" />-->
<!--        </LinearLayout>-->
<!--</LinearLayout>-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            >

            <RadioGroup
                android:id="@+id/progs_rb_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="10dp"/>-->
        </ScrollView>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_on"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/on" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/button_off"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/off" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/button_next"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/next" />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/button_sync"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/sync" />

        <Button
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_save"
            android:layout_height="80dp"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>